terraform/v3/daany_k8s_test/k8s_yaml/be/backend-deployment.yaml
# be_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: daengmap/daeng-map-backend:<해시 값| 태그>
          ports:
            - containerPort: 8080
