terraform/v3/daany_k8s_test/k8s_yaml/be/backend-route.yaml
# backend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: prod
spec:
  parentRefs:
    - name: main-gateway
      sectionName: http
    - name: main-gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /ws
      backendRefs:
        - name: backend-backend
          port: 8080
